config-root/namespaces/jx-staging/jx-python-http/jx-python-http-jx-python-http-deploy.yaml
# Source: jx-python-http/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx-python-http-jx-python-http
  labels:
    draft: draft-app
    chart: "jx-python-http-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: jx-python-http-jx-python-http
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx-python-http-jx-python-http
    spec:
      serviceAccountName: jx-python-http-jx-python-http
      containers:
        - name: jx-python-http
          image: "361124713625.dkr.ecr.ap-southeast-2.amazonaws.com/xzfvictor/jx-python-http:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
