config-root/namespaces/jx-staging/jx-python-http/jx-python-http-svc.yaml
# Source: jx-python-http/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jx-python-http
  labels:
    chart: "jx-python-http-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jx-python-http-jx-python-http
